Asteria/force-app/main/default/objects/Crew_Members__c/Crew_Members__c.object-meta.xml
<CustomObject>
    <description>The Members assigned to a specific Crew.</description>
    <label>Crew Members</label>
    <nameField>
        <label>Crew Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crew Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>