Asteria/force-app/main/default/objects/Crew_Members__c/fields/Crew_List__c.field-meta.xml
<CustomField>
    <fullName>Crew_List__c</fullName>
    <description>The Squad that this Crew Member is assigned to.</description>
    <inlineHelpText>The Squad that this Crew Member is assigned to.</inlineHelpText>
    <label>Squad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Squad</valueSetName>
    </valueSet>
</CustomField>