Asteria/force-app/main/default/objects/Crew_Members__c/fields/Crew_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Crew_Member_ID__c</fullName>
    <description>Mining/Security Crew Member&apos;s unique ID number.</description>
    <displayFormat>CM-{000000}</displayFormat>
    <inlineHelpText>Mining/Security Crew Member&apos;s unique ID number.</inlineHelpText>
    <label>Crew Member ID#</label>
    <type>AutoNumber</type>
</CustomField>