Asteria/force-app/main/default/objects/Crew_Members__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <description>Crew member&apos;s designation as Mining or Security crew.</description>
    <inlineHelpText>Crew member&apos;s designation as Mining or Security crew.</inlineHelpText>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>