Asteria/force-app/main/default/objects/Crew_Members__c/fields/DNA_Test__c.field-meta.xml
<CustomField>
    <fullName>DNA_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Crew Member has been verified human.</description>
    <inlineHelpText>Crew Member has been verified human.</inlineHelpText>
    <label>DNA Test</label>
    <type>Checkbox</type>
</CustomField>