Asteria/force-app/main/default/objects/Crew_Members__c/fields/Rig__c.field-meta.xml
<CustomField>
    <fullName>Rig__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Rig where a Squad is currently assigned.</description>
    <inlineHelpText>The Rig where a Squad is currently assigned.</inlineHelpText>
    <label>Rig</label>
    <referenceTo>Rig__c</referenceTo>
    <relationshipLabel>Crew Members</relationshipLabel>
    <relationshipName>Crew_Members</relationshipName>
    <type>Lookup</type>
</CustomField>